test/files/neg/implicit-log.check
implicit-log.scala:61: byVal is not a valid implicit value for Int(7) => ?{def unwrap: ?} because:
incompatible: (x: 7)7 does not match expected type Int(7) => ?{def unwrap: ?}
    val res = 7.unwrap() // doesn't work
              ^
implicit-log.scala:70: materializing requested scala.reflect.type.ClassTag[String] using scala.reflect.`package`.materializeClassTag[String]()
  val x: java.util.List[String] = List("foo")
                                      ^
implicit-log.scala:96: materializing requested reflect.runtime.universe.type.TypeTag[Class[_]] using scala.reflect.api.`package`.materializeTypeTag[Class[_]](scala.reflect.runtime.`package`.universe)
  println(implicitly[TypeTag[Class[_]]])
                    ^
implicit-log.scala:100: error: value baa is not a member of Int
  1.baa
    ^
one error found
